# fastapi-demo

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi_demo/: main.py
fastapi_demo/api/: __init__.py  router.py
fastapi_demo/api/v1/: __init__.py  diocese.py
fastapi_demo/models/: diocese.py
fastapi_demo/services/: __init__.py  base.py  config.py  db.py  diocese.py
